=== 0.5.3 2014-03-19
* added destroy method to V2::scotty_setting proxy model
* add list call to V2::data_upload, direst_connect_summary to V2::companies, add new proxy model Summary
* removed the customer_query, transaction_query from scotty_setting model
* removed date_added from Contact

=== 0.5.2 2014-03-06

* Added link_established attribute to scotty_setting proxy model
* Added data_uploads proxy model.
* Added source to company transactions.
* Added wants_member_calls attribute to enterprise setting.

=== 0.5.1 2014-02-19

* Added system_of_record to company.

=== 0.5.0 2014-02-06

* Added API V2 support.
* Added attr_accessor attributes back to V1 models.
* Added wants_sms, wants_calls, wants_direct_mail to contact proxy model.
* Added attr_accessor calls back into the contact proxy model.
* Added the scheduled payment proxy model.
* Added skip and unskip methods to the company subscription proxy model.
* Added company_subscription list, find and update methods.
* Updated appointment proxy model list method to use collection.
* Added company_transaction proxy model.
* Added the company_subscription create method

=== 0.4.0 2013-12-10
* Updated appointment proxy model list method to use collection.
* Added missing requires in lobbyist.rb.
* Slowly adding back attr_accessor calls. Review confimation accessors added here.
* Added the review confirmation child attribute to the review proxy model.

=== 0.3.39 2013-11-12

* Removed average_changed field from company.
* Removed transaction receipt fields from the Company proxy model.
* Added contact transcribe_allowed api call.
* Removed admin_user_id from MemberCall.list arguments.
* Removing field average_changed from company.

=== 0.3.38 2013-10-28

* Added insufficient_handwritten_credits endpoint to the contact proxy model.
* Added handwritten_review_credit proxy model.
* Added Company list method.
* Removed unnecessary CGI escape of message.
* Removed CompanyUser attributes.