@@ -1,4 +1,7 @@
+* Added customer proxy model for the V2 API.
+
 === 0.5.3 2014-03-19
+
 * added destroy method to V2::scotty_setting proxy model
 * add list call to V2::data_upload, direst_connect_summary to V2::companies, add new proxy model Summary
 * removed the customer_query, transaction_query from scotty_setting model
